Fix sub nav icon alignment

--- a/src/web/assets/cp/src/css/_global-sidebar.scss
+++ b/src/web/assets/cp/src/css/_global-sidebar.scss
@@ -176,6 +176,7 @@
   min-height: 30px;
   font-weight: 500;
 
+  // Active indicator
   &:before {
     content: '';
     position: absolute;
@@ -206,16 +207,24 @@
   min-height: 26px;
 
   &:before {
-    transform: translateY(-50%);
-    inset-inline-start: calc(
-      var(--xs) + calc(var(--nav-item-prefix-width) / 2) -
-        (var(--nav-item-indicator-size) / 2)
-    );
-    width: var(--nav-item-indicator-size);
-    height: var(--nav-item-indicator-size);
-    border-radius: 100%;
-    top: 50%;
-    background-color: currentColor;
+    display: none;
+  }
+
+  .sidebar-action__prefix {
+    position: relative;
+
+    &:before {
+      content: '';
+      position: absolute;
+      inset-inline-start: 50%;
+      inset-block-start: 50%;
+      width: var(--nav-item-indicator-size);
+      height: var(--nav-item-indicator-size);
+      border-radius: 100%;
+      top: 50%;
+      background-color: currentColor;
+      transform: translateY(-50%) translateX(-50%);
+    }
   }
 
   &[aria-current='page'],
@@ -282,7 +291,6 @@
   width: var(--nav-item-prefix-width);
   aspect-ratio: var(--nav-item-prefix-ratio);
   line-height: 0;
-  flex-shrink: 0;
 }
 
 .sidebar-action__label {
@@ -368,12 +376,6 @@ States
 
     .sidebar-action--sub {
       min-height: 26px;
-
-      &:before {
-        inset-inline-start: 50%;
-        inset-block-start: 50%;
-        transform: translateX(-50%) translateY(-50%);
-      }
     }
 
     .global-nav > ul > li + li {
